<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="preferences">Preferences</string>
    <string name="app_name">Glasgow Bus Finder</string>
	<string name="findstop_title">Find Stop</string>
	<string name="findstopresults_title">Results</string>
	<string name="findplaceresults_title">Results</string>
	<string name="neareststopresults_title">Nearest Stops</string>
	<string name="alert_receiver_title">Alert Receiver</string>
	<string name="findstop_hint">Search...</string>
	<string name="findstop_current_location">Current Location</string>
	<string name="current_location">Current Location</string>
	<string name="nearest_stop">Nearest Stop</string>
	<string name="map_key">Map Key</string>
	<string name="favourites_title">Favourites</string>
	<string name="map_title">Map</string>
	<string name="alerts_title">Alerts</string>
	<string name="departures_title">Departures</string>
	<string name="favourites_empty">You have no favourite stops.</string>
	<string name="departures_empty">Sorry, no departure information is currently available for this stop.</string>
	<string name="timetable_empty">No timetable available</string>
	<string name="timetable_title">Timetable</string>
	<string name="service">Service</string>
	<string name="add_favourite">Add Favourite</string>
	<string name="remove_favourite">Remove Favourite</string>
	<string name="add_alert">Add Alert</string>
	<string name="alerts_empty">You have no bus alerts set.</string>
	<string name="refresh">Refresh</string>
	<string name="view_on_map">View on Map</string>
	<string name="information">Information</string>
	<string name="subway_popup_title">Glasgow Subway</string>
	<string name="to">to</string>
	<string name="from">from</string>
	<string name="toggle_map_mode">Toggle Map Mode</string>
	<string name="stop_info_title">Bus Stop Information</string>
	<string name="show_favourite_stops_only">Favourite Stops Only</string>
	<string name="stop_code_title">Stop Code</string>
	<string name="stop_name_title">Stop Name</string>
	<string name="stop_description_title">Description</string>
	<string name="stop_location_title">Location</string>
	<string name="stop_direction_title">Direction</string>
	<string name="stop_services_title">Services</string>
	<string name="stopinfo_title">Information</string>
	<string name="stopinfo_general">General</string>
	<string name="stopinfo_services">Services</string>
	<string name="show_all_stops">Show All Stops</string>
	<string name="stop_information">Information</string>
	<string name="preparing_database">Preparing Database</string>
	<string name="preparing_database_message">Sorry for the delay, this will only happen once!</string>
	<string name="downloading_departures_message">Downloading departures...</string>
	<string name="remove_favourite_message">Remove this stop from your favourites?</string>
	<string name="description">Description</string>
	<string name="street">Street</string>
	<string name="locality">Locality</string>
	<string name="direction">Direction</string>
	<string name="findstop_empty">No results for your search.</string>
	<string name="neareststopresults_empty">There are no results</string>
	<string name="results_for">results for</string>
	<string name="results_within">results within</string>
	<string name="metres">metres</string>
	<string name="distance_to">Distance To</string>
	<string name="findstopmenu_neareststops">Nearest Stops</string>
	<string name="findstopmenu_favourites">Favourites</string>
	<string name="findstopmenu_map">Map View</string>
	<string name="bus_stops">by Detail</string>
	<string name="place_postcode">by Place / Post Code</string>
<string name="search_message">Searching...</string>
<string name="no_service_message">Sorry, no information is available about this service.</string>
<string name="showing_route">Showing service</string>
<string name="close">Close</string>
<string name="findplace_select">Select a place...</string>
<string name="no_geocoded_places">Sorry, no places found.</string>
<string name="invalid_search_not_enough_chars">Search term must contain at least 3 characters.</string>
<string name="invalid_character">Invalid character</string>
<string name="mapmenu_neareststop">Nearest Stop</string>
<string name="no_nearest_stop">No nearest stop could be found!</string>
<string name="no_location_message">Unable to detect your current location.</string>
<string name="doing_geocoding_message">Searching locations...</string>
<string name="cannot_find_location">Unable to detect your current location.</string>
<string name="findservice_title">Find Service</string>
<string name="findservice_hint">Enter service number...</string>
<string name="no_service_message_short">Sorry, no information is available for service</string>
<string name="neareststop_title">Nearest Stop</string>
<string name="add_alias">Add Nickname</string>
<string name="edit_alias">Edit Nickname</string>
<string name="enter_alias">Enter stop nickname</string>
<string name="cannot_find_nearest_stop">Sorry, your nearest stop cannot be found.</string>
<string name="finding_nearest_stop">Finding your nearest stop...</string>

<string name="waiting_for_fix">Waiting for an update on your position...</string>
<string name="service_on_map">View Service on Map</string>
<string name="set_alert">Set Alert</string>
<string name="at"> at </string>
<string name="amend_alert">Amend Alert</string>
<string name="remove_alert">Remove Alert</string>
<string name="stop_on_map">View Stop on Map</string>
<string name="amend_alert_hint">Minutes before arrival...</string>
<string name="change">Change</string>
<string name="cancel">Cancel</string>
<string name="alert_options">Alert Options</string>
<string name="service_empty">No services to display at the moment.</string>
<string name="alerts_preferences_title">Alerts Preferences</string>
<string name="is_an_invalid_number">is not a number.</string>
<string name="must_be_positive_number">Time must be a positive number</string>
<string name="map_preferences_title">Map Preferences</string>

<string name="stopinfo_preferences_title">Bus Stop Information Preferences</string>
<string name="tabbed_stop_title">Bus Stop Information</string>
<string name="remove_alias">Remove Nickname</string>
<string name="busstop_title">Bus Stop</string>
<string name="search">Search</string>

<string name="departures_attribution">Departure information from NextBuses.mobi</string>
<string name="departures_source_url">http://www.nextbuses.mobi</string>
<string name="disclaimer">Disclaimer</string>
<string name="disclaimer_message">All information provided by this application is third party; we are not responsible for the accuracy of the data provided.</string>
</resources>